# Veri

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: WindowManager.cpp  WindowManager.hpp  main.cpp
src/Game/: Cast.hpp  Cooldowns.cpp  Cooldowns.hpp  Mage.cpp  Mage.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
src/Game/Scenes/: scene_hub.py
src/Graphics/: Animator.cpp  Animator.hpp  Camera.cpp  Camera.hpp  Character.cpp  Character.hpp  Rectangle.cpp  Rectangle.hpp
src/Logic/: AudioPlayer.cpp  AudioPlayer.hpp  Collider.cpp  Collider.hpp  Filesystem.hpp  Logger.cpp  Logger.hpp  Timer.hpp  Validator.hpp
src/Logic/Event/: Event.hpp  EventManager.cpp  EventManager.hpp  KbEvent.cpp  KbEvent.hpp  MbEvent.cpp  MbEvent.hpp  MtEvent.cpp  MtEvent.hpp  MwEvent.cpp  MwEvent.hpp  WinEvent.cpp  WinEvent.hpp
src/VeriPy/: Cast.cpp  Cast.hpp  Character.cpp  Character.hpp  Helper.hpp  Player.cpp  Player.hpp  Rectangle.cpp  Rectangle.hpp  Scene.cpp  Scene.hpp  VeriPy.cpp  Widgets.cpp  Widgets.hpp
